--- a/app/views/home/aboutus.html.erb
+++ b/app/views/home/aboutus.html.erb
@@ -1,8 +1,8 @@
 <%provide(:title, 'About Us')%>
-<% meta :description => "Handmade Bullion Crests, Emblems, Church Embroidery, Christmas Collection",
+<% meta :description => "Emblem Embroiders provide embroidery services for Emblems, Crests, Coat of Arms, Bands and any type of custom patch. Please use Free Quote to get started.",
         :keywords => "Handmade Bullion Crests, Emblems, Church Embroidery, Christmas Collection, Free Quote, Low Price Handmade Embroidery, About Us"
 %>
-<h3 style="margin-bottom: 0px">About Us</h3>
+<h1 style="margin-bottom: 10px">About Us</h1>
 <hr style="margin-top: 2px"/>
 <p>
 	Emblem Embroiders has been providing superior quality services to customers for more than a decade. We’ve created logo and other patches for different companies, schools, corporations, country clubs, sporting clubs, Church embroidery, Christmas collection etc. Patches are embroidered using Gold and Silver bullion, Silk and threads of different colors. You can see sample of our work by clicking on Our Work on top menu or click on any category on sidebar.
