--- a/app/views/home/contactus.html.erb
+++ b/app/views/home/contactus.html.erb
@@ -1,8 +1,8 @@
 <%provide(:title, 'Contact Us')%>
-<% meta :description => "Contact us for Handmade Bullion Crests, Emblems, Church Embroidery, Christmas Collection",
+<% meta :description => "Contact us for Handmade Bullion Crests, Emblems, Church Embroidery, Christmas Collection. Please use Free Quote to get started.",
         :keywords => "Handmade Bullion Crests, Emblems, Church Embroidery, Christmas Collection, Free Quote, Low Price Handmade Embroidery"
 %>
-<h3 style="margin-bottom: 0px">Contact Us</h3>
+<h1 style="margin-bottom: 10px">Contact Us</h1>
 <hr style="margin-top: 2px"/>
 <p>Please feel free to call at 800-837-5053 or drop an email at info@emblemembroiders.com for any question.</p>
 <address>
