--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,10 +1,10 @@
 <%provide(:title, 'Home of all types of Embroidered products')%>
-<% meta :description => "Emblem Embroiders provide embroidery services for Emblems, Crests, Coat of Arms, Bands and any type of custom patch. We offer free design services, please use our free quote tool to get started.",
+<% meta :description => "Emblem Embroiders provide embroidery services for Emblems, Crests, Coat of Arms, Bands and any type of custom patch. Please use Free Quote to get started.",
         :keywords => "Handmade Bullion Crests, Emblems, Church Embroidery, Christmas Collection, Free Quote, Low Price Handmade Embroidery"
 %>
 <div class="row">
 	<div class="span9" style="margin-bottom: 0px">
-		<h3 style="margin-bottom: 0px; margin-top: 0px">Emblem Embroiders</h3>
+		<h1 style="margin-bottom: 10px; margin-top: 0px">Emblem Embroiders</h1>
 		<hr style="margin-top: 2px; margin-bottom: 0px"/>
 		<p>
 			Emblem Embroiders has been providing superior quality services to customers for more than a decade. We’ve created logo and other patches for different companies, schools, corporations, country clubs, sporting clubs, Church embroidery, Christmas collection etc. Patches are embroidered using Gold and Silver bullion, Silk and threads of different colors. You can see sample of our work by clicking on Samples on top menu or click on any category on sidebar under Samples.  
