--- a/app/views/home/pricing.html.erb
+++ b/app/views/home/pricing.html.erb
@@ -1,8 +1,8 @@
 <%provide(:title, 'Pricing')%>
-<% meta :description => "The decision to get a service shouldn't be a trade-off between quality and cost. At Emblem Embroiders we believe in delivering unbeatable quality at unbeatable price.",
+<% meta :description => "At Emblem Embroiders we believe in delivering unbeatable quality at unbeatable price. Please see pricing table.",
         :keywords => "Handmade Bullion Crests, Emblems, Church Embroidery, Christmas Collection, Free Quote, Low Price Handmade Embroidery"
 %>
-<h3 style="margin-bottom: 0px">Pricing</h3>
+<h1 style="margin-bottom: 10px">Pricing</h1>
 <hr style="margin-top: 2px"/>
 <p>
 	The decision to get a service shouldn't be a trade-off between quality and cost. At Emblem Embroiders we believe in delivering unbeatable quality at unbeatable price. Please see below sections for pricing details.
