--- a/app/views/home/privacypolicy.html.erb
+++ b/app/views/home/privacypolicy.html.erb
@@ -1,5 +1,5 @@
 <%provide(:title, 'Privacy Policy')%>
-<% meta :description => "Handmade Bullion Crests, Emblems, Church Embroidery, Christmas Collection",
+<% meta :description => "Handmade Bullion Crests, Emblems, Church Embroidery, Christmas Collection, Privacy Policy",
         :keywords => "Handmade Bullion Crests, Emblems, Church Embroidery, Christmas Collection, Free Quote, Low Price Handmade Embroidery"
 %>
 
