--- a/app/views/home/products.html.erb
+++ b/app/views/home/products.html.erb
@@ -1,8 +1,8 @@
 <%provide(:title, 'Samples')%>
-<% meta :description => "Handmade Bullion Crests, Emblems, Church Embroidery, Christmas Collection",
+<% meta :description => "Emblem Embroiders provide embroidery services for Emblems, Crests, Coat of Arms, Bands and any type of custom patch. Please use Free Quote to get started.",
         :keywords => "Handmade Bullion Crests, Emblems, Church Embroidery, Christmas Collection, Free Quote, Low Price Handmade Embroidery"
 %>
-<h3 style="margin-bottom: 0px">Samples</h3>
+<h1 style="margin-bottom: 10px">Samples</h1>
 <hr style="margin-top: 2px"/>
 
 <p>
