--- a/app/views/quotes/new.html.erb
+++ b/app/views/quotes/new.html.erb
@@ -1,7 +1,9 @@
 <%provide(:title, 'Free Quote')%>
+<% meta :description => "Free Quote for Emblems, Crests, Coat of Arms, Bands and any type of custom patch.",
+        :keywords => "Handmade Bullion Crests, Emblems, Church Embroidery, Christmas Collection, Free Quote, Low Price Handmade Embroidery"
+%>
 
-
-<h3 style="margin-bottom: 0px">Free Quote</h3>
+<h1 style="margin-bottom: 10px">Free Quote</h1>
 <hr style="margin-top: 2px"/>
 Please fill the below form and click on the Submit button at the bottom of the page. We will review your quote and get back to you in one business day. Fields in <strong>bold</strong> are mandatory.
 
