--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -21,7 +21,9 @@
 	</script>    
 </head>
 <body>
+	
 	<div class="container">
+		<a href="https://plus.google.com/105667092737307660897" rel="publisher">Google+</a>
 		<div class="row">
 			<div class="span12">
 				<%= render 'layouts/navigation'%>
