--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -8,6 +8,16 @@
 /* GLOBAL STYLES
     -------------------------------------------------- */
     /* Padding below the footer and lighter body text */
+   
+   h1 {
+     font-size: 2.0em;
+     margin-bottom: 2px; 
+     margin-top: 0px;
+   }
+   hr {
+     margin-top: 2px; 
+     margin-bottom: 5px
+   }
 
     body {
       padding-bottom: 40px;
