--- a/app/views/home/contactus.html.erb
+++ b/app/views/home/contactus.html.erb
@@ -2,8 +2,8 @@
 <% meta :description => "Contact us for Handmade Bullion Crests, Emblems, Church Embroidery, Christmas Collection. Please use Free Quote to get started.",
         :keywords => "Handmade Bullion Crests, Emblems, Church Embroidery, Christmas Collection, Free Quote, Low Price Handmade Embroidery"
 %>
-<h1 style="margin-bottom: 10px">Contact Us</h1>
-<hr style="margin-top: 2px"/>
+<h1>Contact Us</h1>
+<hr/>
 <p>Please feel free to call at 800-837-5053 or drop an email at info@emblemembroiders.com for any question.</p>
 <address>
   <strong>Emblem Embroiders Inc</strong><br>
