--- a/app/views/home/howwework.html.erb
+++ b/app/views/home/howwework.html.erb
@@ -2,8 +2,8 @@
 <% meta :description => "How to place order of Handmade Bullion Crests, Emblems, Church Embroidery, Christmas Collection",
         :keywords => "Handmade Bullion Crests, Emblems, Church Embroidery, Christmas Collection, Free Quote, Low Price Handmade Embroidery"
 %>
-<h1 style="margin-bottom: 10px">How to Place Order</h1>
-<hr style="margin-top: 2px"/>
+<h1>How to Place Order</h1>
+<hr/>
 <p>Ordering is easy, following are the steps to be followed to place order:</p>
 <ol>
   <li>
