--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -4,8 +4,8 @@
 %>
 <div class="row">
 	<div class="span9" style="margin-bottom: 0px">
-		<h1 style="margin-bottom: 10px; margin-top: 0px">Emblem Embroiders</h1>
-		<hr style="margin-top: 2px; margin-bottom: 0px"/>
+		<h1>Emblem Embroiders</h1>
+		<hr/>
 		<p>
 			Emblem Embroiders has been providing superior quality services to customers for more than a decade. We’ve created logo and other patches for different companies, schools, corporations, country clubs, sporting clubs, Church embroidery, Christmas collection etc. Patches are embroidered using Gold and Silver bullion, Silk and threads of different colors. You can see sample of our work by clicking on Samples on top menu or click on any category on sidebar under Samples.  
 		</p>
