--- a/app/views/home/pricing.html.erb
+++ b/app/views/home/pricing.html.erb
@@ -2,8 +2,8 @@
 <% meta :description => "At Emblem Embroiders we believe in delivering unbeatable quality at unbeatable price. Please see pricing table.",
         :keywords => "Handmade Bullion Crests, Emblems, Church Embroidery, Christmas Collection, Free Quote, Low Price Handmade Embroidery"
 %>
-<h1 style="margin-bottom: 10px">Pricing</h1>
-<hr style="margin-top: 2px"/>
+<h1>Pricing</h1>
+<hr/>
 <p>
 	The decision to get a service shouldn't be a trade-off between quality and cost. At Emblem Embroiders we believe in delivering unbeatable quality at unbeatable price. Please see below sections for pricing details.
 </p>
