--- a/app/views/home/products.html.erb
+++ b/app/views/home/products.html.erb
@@ -2,8 +2,8 @@
 <% meta :description => "Emblem Embroiders provide embroidery services for Emblems, Crests, Coat of Arms, Bands and any type of custom patch. Please use Free Quote to get started.",
         :keywords => "Handmade Bullion Crests, Emblems, Church Embroidery, Christmas Collection, Free Quote, Low Price Handmade Embroidery"
 %>
-<h1 style="margin-bottom: 10px">Samples</h1>
-<hr style="margin-top: 2px"/>
+<h1>Samples</h1>
+<hr/>
 
 <p>
 	Emblem Embroiders has been providing superior quality services to our customers for more than a decade. Please see below samples pages to get an overview of expertise.  
