--- a/app/views/home/samples.html.erb
+++ b/app/views/home/samples.html.erb
@@ -4,8 +4,8 @@
 %>
 <% breadcrumb :samples, @product %>
 
-<h1 style="margin-bottom: 10px"><%= @product.title %></h1>
-<hr style="margin-top: 2px; margin-bottom: 2px"/>
+<h1 ><%= @product.title %></h1>
+<hr/>
 <p><%= @product.description %></p>
 <ul class="thumbnails">
 <% @product_samples.each do |product_sample| %>
