--- a/app/views/home/sitemap.html.erb
+++ b/app/views/home/sitemap.html.erb
@@ -2,8 +2,8 @@
 <% meta :description => "Handmade Bullion Crests, Emblems, Church Embroidery, Christmas Collection",
         :keywords => "Handmade Bullion Crests, Emblems, Church Embroidery, Christmas Collection, Free Quote, Highest Quality at Low price, Frequently Asked Questions"
 %>
-<h1 style="margin-bottom: 10px">Site Map</h1>
-<hr style="margin-top: 2px"/>
+<h1>Site Map</h1>
+<hr/>
 <ul>
 	<li>
 		<%= link_to "Home", root_url %>
