--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,7 +23,7 @@
 <body>
 	
 	<div class="container">
-		<a href="https://plus.google.com/105667092737307660897" rel="publisher">Google+</a>
+		<!-- a href="https://plus.google.com/105667092737307660897" rel="publisher">Google+</a -->
 		<div class="row">
 			<div class="span12">
 				<%= render 'layouts/navigation'%>
