--- a/app/views/quotes/new.html.erb
+++ b/app/views/quotes/new.html.erb
@@ -3,8 +3,8 @@
         :keywords => "Handmade Bullion Crests, Emblems, Church Embroidery, Christmas Collection, Free Quote, Low Price Handmade Embroidery"
 %>
 
-<h1 style="margin-bottom: 10px">Free Quote</h1>
-<hr style="margin-top: 2px"/>
+<h1>Free Quote</h1>
+<hr/>
 Please fill the below form and click on the Submit button at the bottom of the page. We will review your quote and get back to you in one business day. Fields in <strong>bold</strong> are mandatory.
 
 
