--- a/app/views/home/faqs.html.erb
+++ b/app/views/home/faqs.html.erb
@@ -2,8 +2,8 @@
 <% meta :description => "Emblem Embroiders provide embroidery services for Emblems, Crests, Coat of Arms, Bands and any type of custom patch. Please use Free Quote to get started.",
         :keywords => "Handmade Bullion Crests, Emblems, Church Embroidery, Christmas Collection, Free Quote, Highest Quality at Low price, Frequently Asked Questions"
 %>
-<h1 style="margin-bottom: 10px">Frequently Asked Questions</h1>
-<hr style="margin-top: 2px"/>
+<h1>Frequently Asked Questions</h1>
+<hr/>
 <p>
 	Following are few FAQs, if your question is not answered please feel free to call us at 888-888-8888 or drop us an email at test@test.com
 </p>
