--- a/app/views/product_samples/show.html.erb
+++ b/app/views/product_samples/show.html.erb
@@ -8,8 +8,8 @@
   <%= @product_sample.product_id %>
 </p -->
 
-<h1 style="margin-bottom: 10px"><%= @product_sample.title %></h1>
-<hr style="margin-top: 2px; margin-bottom: 2px"/>
+<h1><%= @product_sample.title %></h1>
+<hr/>
 
 <p>
   <%= @product_sample.description %>
