--- a/app/views/home/pricing.html.erb
+++ b/app/views/home/pricing.html.erb
@@ -22,7 +22,7 @@
 
 <legend>High Quality at Low Prices</legend>
 <p>
-	Please see our pricing attached to our sample work to get an idea of how lower our prices are. We've our own manufacturing unit that's why our pricing are lowest in market.
+	We've our own manufacturing unit that's why our pricing are lowest in market. Please see below pricing table and compare with others.
 </p>		  
 
 <legend>Free Desing Services</legend>
