--- a/app/views/home/samples.html.erb
+++ b/app/views/home/samples.html.erb
@@ -17,7 +17,7 @@
           <div class="customheight">
           <h5 style="color: #0088CC; margin-top: 0px; margin-bottom: 0px;"><%= product_sample.title %></h5>
         	<p style="margin-top: 0px; margin-bottom: 0px;">Size: <%= product_sample.size %></p>
-    	    <p style="margin-top: 0px; margin-bottom: 0px;">Price: <%= product_sample.price %></p>
+    	    <!-- p style="margin-top: 0px; margin-bottom: 0px;">Price: <%#= product_sample.price %></p -->
     	    </div>
           <p align="center">          	
             <!-- a href="#myModal<%=product_sample.id.to_s%>" class="btn btn-inverse btn-block" data-toggle="modal">View More information</a -->
