--- a/app/views/product_samples/show.html.erb
+++ b/app/views/product_samples/show.html.erb
@@ -20,10 +20,10 @@
   <%= @product_sample.size %>
 </p>		
 
-<p>
+<!-- p>
   <b>Price:</b>
-  <%= @product_sample.price %>
-</p>
+  <%#= @product_sample.price %>
+</p -->
 
 <p>		  
   <%= image_tag @product_sample.image.url, :class => "img-polaroid"%>		  			
