--- a/app/views/home/faqs.html.erb
+++ b/app/views/home/faqs.html.erb
@@ -5,7 +5,7 @@
 <h1>Frequently Asked Questions</h1>
 <hr/>
 <p>
-	Following are few FAQs, if your question is not answered please feel free to call us at 888-888-8888 or drop us an email at test@test.com
+	Following are few FAQs, if your question is not answered please feel free to call us at 800-837-5053 or drop us an email at <a href="mailto:info@emblemembroiders.com">info@emblemembroiders.com</a>
 </p>
 
 <legend>How much time it will take for patches to be delivered?</legend>
