--- a/app/views/layouts/_sidebar.html.erb
+++ b/app/views/layouts/_sidebar.html.erb
@@ -8,6 +8,24 @@
       </li>
     <% end %>
     
+    <li class="nav-header" style="background-color: #171717; color: #999999">Follow us on facebook</li>
+    <div class="fb-like" data-href="https://www.facebook.com/EmblemEmbroiders" data-width="225" data-show-faces="true" data-send="true"></div>
+    
+    <li class="nav-header" style="background-color: #171717; color: #999999">Follow us on Goolge Plus</li>
+    <!-- Place this tag where you want the +1 button to render. -->
+		<!-- Place this code where you want the badge to render. -->
+<!-- Place this tag where you want the +1 button to render. -->
+<div class="g-plusone" data-annotation="inline" data-width="300"></div>
+
+<!-- Place this tag after the last +1 button tag. -->
+<script type="text/javascript">
+  (function() {
+    var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
+    po.src = 'https://apis.google.com/js/plusone.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
+  })();
+</script>
+
      
     <% if !session[:recent_views].nil? %>
     	<li class="nav-header" style="background-color: #171717; color: #999999">Recent Sample Views</li>
