--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -19,9 +19,18 @@
   ga('create', 'UA-42604158-1', 'emblemembroiders.com');
   ga('send', 'pageview');
 
-	</script>    
+	</script>
+	    
 </head>
 <body>
+	<div id="fb-root"></div>
+<script>(function(d, s, id) {
+  var js, fjs = d.getElementsByTagName(s)[0];
+  if (d.getElementById(id)) return;
+  js = d.createElement(s); js.id = id;
+  js.src = "//connect.facebook.net/en_US/all.js#xfbml=1";
+  fjs.parentNode.insertBefore(js, fjs);
+}(document, 'script', 'facebook-jssdk'));</script>
 	
 	<div class="container">
 		<!-- a href="https://plus.google.com/105667092737307660897" rel="publisher">Google+</a -->
