--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,6 +3,8 @@
 <head>  
   <title><%= full_title(yield(:title)) %></title>
   <%= metamagic %>
+  <!-- F-Ucesp-U1Tvvcq8WvHcNk3vYjk --> 
+	<meta name="alexaVerifyID" content="F-Ucesp-U1Tvvcq8WvHcNk3vYjk" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="msvalidate.01" content="E0C1DDD47A96F58796607DE44EEA77F9" />
   <meta name="p:domain_verify" content="8aa4cd2128aee95da1243756d501d553"/>
