--- a/app/views/home/contactus.html.erb
+++ b/app/views/home/contactus.html.erb
@@ -1,6 +1,6 @@
 <%provide(:title, 'Contact Us')%>
 <% meta :description => "Contact us for Handmade Bullion Crests, Emblems, Church Embroidery, Christmas Collection. Please use Free Quote to get started.",
-        :keywords => "Handmade Bullion Crests, Emblems, Church Embroidery, Christmas Collection, Free Quote, Low Price Handmade Embroidery"
+        :keywords => "Handmade Bullion Crests, Heraldry, Emblems, Family Crests, Coat of Arms, Church Embroidery, Christmas Collection, Patches, Clan Crests, Navy Badges, Military Blazer Badges, Masonic Supplies, Uniform Accessories, Flags, Sashes, WW II Items, Bands Uniform"
 %>
 <h1>Contact Us</h1>
 <hr/>
