--- a/app/views/home/faqs.html.erb
+++ b/app/views/home/faqs.html.erb
@@ -1,6 +1,6 @@
 <%provide(:title, 'Frequently Asked Questions')%>
 <% meta :description => "Emblem Embroiders provide embroidery services for Emblems, Crests, Coat of Arms, Bands and any type of custom patch. Please use Free Quote to get started.",
-        :keywords => "Handmade Bullion Crests, Emblems, Church Embroidery, Christmas Collection, Free Quote, Highest Quality at Low price, Frequently Asked Questions"
+        :keywords => "Handmade Bullion Crests, Heraldry, Emblems, Family Crests, Coat of Arms, Church Embroidery, Christmas Collection, Patches, Clan Crests, Navy Badges, Military Blazer Badges, Masonic Supplies, Uniform Accessories, Flags, Sashes, WW II Items, Bands Uniform"
 %>
 <h1>Frequently Asked Questions</h1>
 <hr/>
