--- a/app/views/home/howwework.html.erb
+++ b/app/views/home/howwework.html.erb
@@ -1,6 +1,6 @@
 <%provide(:title, 'How to place order')%>
 <% meta :description => "How to place order of Handmade Bullion Crests, Emblems, Church Embroidery, Christmas Collection",
-        :keywords => "Handmade Bullion Crests, Emblems, Church Embroidery, Christmas Collection, Free Quote, Low Price Handmade Embroidery"
+        :keywords => "Handmade Bullion Crests, Heraldry, Emblems, Family Crests, Coat of Arms, Church Embroidery, Christmas Collection, Patches, Clan Crests, Navy Badges, Military Blazer Badges, Masonic Supplies, Uniform Accessories, Flags, Sashes, WW II Items, Bands Uniform"
 %>
 <h1>How to Place Order</h1>
 <hr/>
