--- a/app/views/quotes/new.html.erb
+++ b/app/views/quotes/new.html.erb
@@ -1,6 +1,6 @@
 <%provide(:title, 'Free Quote')%>
 <% meta :description => "Free Quote for Emblems, Crests, Coat of Arms, Bands and any type of custom patch.",
-        :keywords => "Handmade Bullion Crests, Emblems, Church Embroidery, Christmas Collection, Free Quote, Low Price Handmade Embroidery"
+        :keywords => "Handmade Bullion Crests, Heraldry, Emblems, Family Crests, Coat of Arms, Church Embroidery, Christmas Collection, Patches, Clan Crests, Navy Badges, Military Blazer Badges, Masonic Supplies, Uniform Accessories, Flags, Sashes, WW II Items, Bands Uniform, Free Quote, Low Price Handmade Embroidery"
 %>
 
 <h1>Free Quote</h1>
