--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,6 +1,6 @@
 <%provide(:title, 'Home of all types of Embroidered products')%>
 <% meta :description => "Emblem Embroiders provide embroidery services for Emblems, Crests, Coat of Arms, Bands and any type of custom patch. Please use Free Quote to get started.",
-        :keywords => "Handmade Bullion Crests, Emblems, Church Embroidery, Christmas Collection, Free Quote, Low Price Handmade Embroidery"
+        :keywords => "Handmade Bullion Crests, Heraldry, Emblems, Family Crests, Coat of Arms, Church Embroidery, Christmas Collection, Patches, Clan Crests, Navy Badges, Military Blazer Badges, Masonic Supplies, Uniform Accessories, Flags, Sashes, WW II Items, Bands Uniform, Free Quote, Low Price Handmade Embroidery"
 %>
 <div class="row">
 	<div class="span9" style="margin-bottom: 0px">
