--- a/app/views/home/samples.html.erb
+++ b/app/views/home/samples.html.erb
@@ -1,6 +1,6 @@
 <%provide(:title, @product.title)%>
 <% meta :description => trim_meta_description(@product.description),
-        :keywords => @product.title
+        :keywords => @product.title + ", Handmade Bullion Crests, Heraldry, Emblems, Family Crests, Coat of Arms, Church Embroidery, Christmas Collection, Patches, Clan Crests, Navy Badges, Military Blazer Badges, Masonic Supplies, Uniform Accessories, Flags, Sashes, WW II Items, Bands Uniform"
 %>
 <% breadcrumb :samples, @product %>
 
