--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -18,7 +18,7 @@
       	<% end %>
     	<% end %>
   		<p style="font-size: 10px; text-align: center">All the samples shown in the website are our previous work for our customers and these are sole property of our customers. These are shown here just give an overview to our prospective customers about our experience.</p>	
-  		<p style="font-size: 10px; text-align: center">Pricing for each quote will be calculated at the time of request. Prices shown for samples were calculated at the time when they were manufactured so prices might be different than shown on website.</p>
+  		<p style="font-size: 10px; text-align: center">Pricing for each patch will be calculated at the time of request. Price depend upon multiple factors mainly the embroidery area and quantity. More the quantity less the price. Please see <%= link_to "Pricing", pricing_url%> section for detail on pricing.</p>
 		</div>
 		<div class="span2">
 		</div>
