--- a/app/views/home/pricing.html.erb
+++ b/app/views/home/pricing.html.erb
@@ -36,7 +36,7 @@
 </p>
 
 <legend>Hand Embroidered Bullion Crests and Emblems Pricing Table</legend>		  
-<p>Following table gives you an overview of our pricing for Hand Embroidered Bullion Crests. As mentioned above final quote will be provided after seeing the sample design. Following are estimated prices:</p>
+<p>Following table gives you an overview of our pricing for Hand Embroidered Bullion Crests. As mentioned above final quote will be provided after seeing the sample design. Pricing is <strong>negotiable</strong> on the basis of quantity ordered and frequency of orders. Following are estimated prices:</p>
 <table width="100%" class="table table-striped table-bordered table-hover table-condensed">
 	<thead>
   <tr>
@@ -51,27 +51,27 @@
 	<tbody>
 	  <tr>
 	    <td>3" x 3"</td>
-	    <td>$7.00</td>
-	    <td>$6.75</td>
-	    <td>$6.25</td>
-	    <td>$5.75</td>
-	    <td>$5.00</td>	    
+	    <td>$5.00</td>
+	    <td>$4.50</td>
+	    <td>$4.00</td>
+	    <td>$3.50</td>
+	    <td>$3.00</td>	    
 	  </tr>
 	  <tr>
 	    <td>4" x 4"</td>
-	    <td>$8.00</td>
-	    <td>$7.75</td>
-	    <td>$7.25</td>
-	    <td>$6.75</td>
-	    <td>$6.00</td>	    
+	    <td>$6.00</td>
+	    <td>$5.50</td>
+	    <td>$5.00</td>
+	    <td>$4.50</td>
+	    <td>$4.00</td>	    
 	  </tr>
 	  <tr>
 	    <td>5" x 5"</td>
-	    <td>$10.00</td>
-	    <td>$9.75</td>
-	    <td>$9.25</td>
-	    <td>$8.75</td>
-	    <td>$8.00</td>	    
+	    <td>$8.00</td>
+	    <td>$7.50</td>
+	    <td>$7.00</td>
+	    <td>$6.50</td>
+	    <td>$6.00</td>	    
 	  </tr>
 	</tbody>
 </table>
