--- a/app/views/product_samples/_product_sample.html.erb
+++ b/app/views/product_samples/_product_sample.html.erb
@@ -23,7 +23,7 @@
 			    	<% end %>
 			    	<p>
 						  <b>Price:</b>
-						  As low as $5.00 for 3" x 3" patch
+						  Please see <%= link_to "Pricing", pricing_url%>
 						</p>
 			    	<!-- p><strong>Price: </strong><%#=product_sample.price%></p -->
 			    	<p align="center">
