--- a/app/views/home/contactus.html.erb
+++ b/app/views/home/contactus.html.erb
@@ -6,9 +6,7 @@
 <hr/>
 <p>Please feel free to call at 800-837-5053 or drop an email at info@emblemembroiders.com for any question.</p>
 <address>
-  <strong>Emblem Embroiders Inc</strong><br>
-  1048 Franklin Ave<br>
-  Bronx, NY 10456<br>
+  <strong>Emblem Embroiders</strong><br>  
   Phone: 800-837-5053<br>
   <a href="mailto:info@emblemembroiders.com">info@emblemembroiders.com</a>
 </address>
