--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -40,7 +40,7 @@
                 </li -->
               </ul>
             </div><!--/.nav-collapse -->
-            <p class="brand" style="margin-bottom: 0px">800-837-5053</p>
+            <!-- p class="brand" style="margin-bottom: 0px">800-837-5053</p -->
           </div><!-- /.navbar-inner -->
         </div><!-- /.navbar -->
 
