--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -41,6 +41,7 @@
               </ul>
             </div><!--/.nav-collapse -->
             <!-- p class="brand" style="margin-bottom: 0px">800-837-5053</p -->
+              <!-- test -->
           </div><!-- /.navbar-inner -->
         </div><!-- /.navbar -->
 
